feat: add translation key for ctw3 pump

--- a/custom_components/petkit/translations/en.json
+++ b/custom_components/petkit/translations/en.json
@@ -96,6 +96,9 @@
         },
         "care_plus_subscription": {
           "name": "Care+ subscription"
+        },
+        "pump_status": {
+          "name": "Pump flow"
         }
       },
       "button": {
